update user reference from 'name' to 'first_name'

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
     <form>
     <h4 class="mb-3 fw-normal"><%= t(".title") %></h4>
       <div class="form-floating">
-        <%= f.input :name,
+        <%= f.input :first_name,
                     required: true,
                     autofocus: true,
                     input_html: { autocomplete: "off" },
