--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,18 +13,18 @@
     <div class="collapse navbar-collapse" id="collapseWidthNavbar">
       <% if user_signed_in? %>
         <ul class="nav">
-          <li class="nav-item"><a href="/appointments" class="nav-link text-dark"><strong><%= t('.appointments') %></strong></a></li>
-          <li class="nav-item"><a href="/analytics" class="nav-link text-dark"><%= t('.analytics') %></a></li>
-          <li class="nav-item"><a href="/patients" class="nav-link text-dark"><%= t('.patients') %></a></li>
-          <li class="nav-item"><a href="/clients" class="nav-link text-dark"><%= t('.clients') %></a></li>
+          <li class="nav-item"><a href="<%= url_for(controller: '/appointments', action: 'index', locale: I18n.locale) %>" class="nav-link text-dark"><strong><%= t('.appointments') %></strong></a></li>
+          <li class="nav-item"><a href="<%= url_for(controller: '/analytics', action: 'index', locale: I18n.locale) %>" class="nav-link text-dark"><%= t('.analytics') %></a></li>
+          <li class="nav-item"><a href="<%= url_for(controller: '/patients', action: 'index', locale: I18n.locale) %>" class="nav-link text-dark"><%= t('.patients') %></a></li>
+          <li class="nav-item"><a href="<%= url_for(controller: '/clients', action: 'index', locale: I18n.locale) %>" class="nav-link text-dark"><%= t('.clients') %></a></li>
           <li class="nav-item">
             <div class="dropdown-center btn-group">
               <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <strong><%= t('.my_account') %></strong>
               </a>
               <ul class="dropdown-menu dropdown-menu-end outline-dark">
-                <li><%= link_to t('.edit_profile'), edit_user_registration_path, class: "dropdown-item" %></li>
-                <li><%= link_to t('.log_out'), destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item"%></li>
+                <li><%= link_to t('.edit_profile'), edit_user_registration_path(locale: I18n.locale), class: "dropdown-item" %></li>
+                <%= button_to t('.log_out'), destroy_user_session_path, method: :delete, class: "dropdown-item" %>
               </ul>
             </div>
           </li>
