--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,35 +4,35 @@
     <br>
     <h3><%= t(".today", date: l(Time.new, format: :long)) %></h3>
     <div class="row p-1">
-      <div class="col-sl-6 p-2">
+      <div class="col-12 p-2">
         <div class="card">
           <a href="/appointments" class="btn btn-primary">
             <h2><%= t(".new_appointment") %></h2>
           </a>
         </div>
       </div>
-      <div class="col-sm-6 p-2">
+      <div class="col-12 p-2">
         <div class="card border-dark">
           <a href="/analytics" class="btn btn-light">
             <h2><%= t(".analytics") %></h2>
           </a>
         </div>
       </div>
-      <div class="col-sm-6 p-2">
+      <div class="col-12 p-2">
         <div class="card border-dark">
           <a href="/patients" class="btn btn-light">
             <h2><%= t(".patients") %></h2>
           </a>
         </div>
       </div>
-      <div class="col-sm-6 p-2">
+      <div class="col-12 p-2">
         <div class="card border-dark">
           <a href="/clients" class="btn btn-light">
             <h2><%= t(".clients") %></h2>
           </a>
         </div>
       </div>
-      <div class="col-sm-6 p-2">
+      <div class="col-12 p-2">
         <div class="card border-dark">
           <a href="#" class="btn btn-light">
             <h2><%= t(".share_feedback") %></h2>
