--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,11 +13,11 @@
     <div class="collapse navbar-collapse" id="collapseWidthNavbar">
       <% if user_signed_in? %>
         <ul class="nav">
-          <li class="nav-item"><%= link_to t('.appointments'), { controller: '/appointments', action: 'index', locale: I18n.locale }, class: "nav-link text-dark" %></li>
-          <li class="nav-item"><%= link_to t('.analytics'), { controller: '/analytics', action: 'index', locale: I18n.locale }, class: "nav-link text-dark" %></li>
+          <li class="nav-item"><%= link_to t('.appointments'), { controller: '/appointments', action: 'index', locale: I18n.locale }, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to t('.analytics'), { controller: '/analytics', action: 'index', locale: I18n.locale }, class: "nav-link" %></li>
           <li class="nav-item">
             <div class="dropdown-center btn-group">
-              <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <strong><%= t('.my_account') %></strong>
               </a>
               <ul class="dropdown-menu dropdown-menu-end outline-dark">
