--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,7 +39,14 @@
 
 <br>
 
-<h6 class="m-4">If you want to delete your account, please send an email
-  <a href="mailto:aleks.vangjelofski@gmail.com?subject=Please delete my account&body=Dear Aleks, please delete my account.">here
-  </a>
-</h6>
+<div>
+   <h5><%= t(".delete_account") %></h5>
+
+  <%= button_to "Delete my account",
+  registration_path(resource_name),
+  data: { confirm: "Are you sure?",
+  turbo_confirm: "Are you sure?" },
+  method: :delete,
+  class: "btn btn-danger mb-2" %>
+
+</div>
