--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -23,7 +23,7 @@
       <%= a.input :state, label: t('.state'), input_html: { class: 'form-control', placeholder: t('.state_placeholder') } %>
     </div>
     <div class="col-6 form-group">
-      <%= a.input :country, label: t('.country'), as: :country, priority: ["CH"], input_html: { class: 'form-control', placeholder: t('.country_placeholder') } %>
+      <%= a.input :country, label: t('.country'), as: :country, priority: ["CH"], input_html: { class: 'form-control' } %>
     </div>
   <% end %>
 
