--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,8 +27,8 @@
       </div>
       <div class="col-12 p-2">
         <div class="card border-dark">
-          <a href="/clients" class="btn btn-light">
-            <h2><%= t(".clients") %></h2>
+          <a href="/tenant" class="btn btn-light">
+            <h2><%= t(".tenants") %></h2>
           </a>
         </div>
       </div>
