users can invite other members to their tenants

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
       </div>
       <div class="col-12 p-2">
         <div class="card border-dark">
-          <a href="/tenant" class="btn btn-light">
+          <a href="/tenants" class="btn btn-light">
             <h2><%= t(".tenants") %></h2>
           </a>
         </div>
