--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -18,7 +18,7 @@
       <% end %>
     </div>
     <div class="col-md-6 offset-md-3 mt-3">
-      <%= link_to t(".back_to_appointments"), appointments_path, class: "btn btn-secondary" %>
+      <%= link_to t(".back_to_appointments"), daily_index_appointments_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
