--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -14,8 +14,8 @@
           <%="📍 #{appointment.patient.address.nice_address}" %>
         </p>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><%= t(".arrived_at", time: l(appointment.start_time, format: :short)) %></li>
-          <li class="list-group-item"><%= t(".left_at", time: l(appointment.end_time, format: :short)) %></li>
+          <li class="list-group-item"><%= t(".arrived_at", time: l(appointment.start_time, format: :short, zone: current_user.time_zone)) %></li>
+          <li class="list-group-item"><%= t(".left_at", time: l(appointment.end_time, format: :short, zone: current_user.time_zone)) %></li>
         </ul>
       </div>
     <% end %>
