--- a/app/views/appointments/daily_index.html.erb
+++ b/app/views/appointments/daily_index.html.erb
@@ -5,7 +5,7 @@
 <div id="appointments" class="row mb-5">
   <% @appointments.sort_by(&:start_time).each do |appointment| %>
     <div class="col-md-4 mb-3">
-      <%= render appointment, appointment: appointment.inspect %>
+      <%= render appointment, appointment: appointment%>
     </div>
   <% end %>
 </div>
