fix main layout padding and margins

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,4 @@
 // Import your components CSS files here.
-
 @import "form_legend_clear";
 @import "navbar";
 @import "footer";
@@ -7,3 +6,4 @@
 @import "features";
 @import "form";
 @import "google_button";
+@import "main_layout";
