fix navbar and footer padding and margins

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,11 @@
   justify-content:space-evenly;
   background: transparent;
   backdrop-filter: blur(5px);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  margin-bottom: 25px;
 }
 
 .navbar-css .navbar-collapse {
